refactor cursor pagination tests to userIT under follower/following description